# learn_rmq

./: config.py  consumer.py  publisher.py  pyproject.toml
faststream_test/: app.py  app2.py  config.py  data.py  event.py  send_message.py
