[project]
name = "learn-rmq"
version = "0.1.0"
description = ""
authors = [
    {name = "PlzrtrustMe",email = "andryxakulishow@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pika (>=1.3.2,<2.0.0)",
    "pika-stubs (>=0.1.3,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
