[project]
name = "learn-rmq"
version = "0.1.0"
description = ""
authors = [
    {name = "PlzrtrustMe",email = "andryxakulishow@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "faststream[cli,rabbit] (>=0.5.41,<0.6.0)",
    "adaptix (>=3.0.0b11,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
